--- a/Axios/index.html
+++ b/Axios/index.html
@@ -2,15 +2,42 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Axios</title>
-  <script src="./main.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <title>Axios Crash Course</title>
 </head>
 
 <body>
+  <div class="my-5 container">
+    <div class="text-center">
+      <h1 class="mb-3 text-center display-4">Axios Crash Course</h1>
+      <button class="my-3 btn btn-primary" id="get">GET</button>
+      <button class="btn btn-info" id="post">POST</button>
+      <button class="btn btn-warning" id="update">PUT/PATCH</button>
+      <button class="btn btn-danger" id="delete">DELETE</button>
+      <button class="btn btn-secondary" id="sim">Sim Requests</button>
+      <button class="btn btn-secondary" id="headers">
+        Custom Headers
+      </button>
+      <button class="btn btn-secondary" id="transform">
+        Transform
+      </button>
+      <button class="btn btn-secondary" id="error">
+        Error Handling
+      </button>
+      <button class="btn btn-secondary" id="cancel">
+        Cancel
+      </button>
+    </div>
+    <hr />
+    <div id="res"></div>
+  </div>
 
-  <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
