--- a/Axios/index.html
+++ b/Axios/index.html
@@ -7,13 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-  <title>Axios Crash Course</title>
+  <title>Axios</title>
 </head>
 
 <body>
   <div class="my-5 container">
     <div class="text-center">
-      <h1 class="mb-3 text-center display-4">Axios Crash Course</h1>
+      <h1 class="mb-3 text-center display-4">Axios</h1>
       <button class="my-3 btn btn-primary" id="get">GET</button>
       <button class="btn btn-info" id="post">POST</button>
       <button class="btn btn-warning" id="update">PUT/PATCH</button>
